# agentw

./: .gitignore  CMakeList22s.txt  CMakeLists.txt  INTEGRATION_SUMMARY.txt  README.md  ROBOT_INTEGRATION.md  WHISPER_INTEGRATION.md  build.sh  ipcam.cpp  ipcam.h  main.cpp  robot_tools.cpp  robot_tools.h  serial_robot.cpp  serial_robot.h  whisper_input.cpp  whisper_input.h
llama.cpp/: CMakeLists.txt
src/: agent.cpp  agent.h  model.cpp  model.h
stable-diffusion.cpp/: main.cpp
